--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
   "bugs": {
     "url": "https://github.com/u4bi/cheeriojs-web-scraping/issues"
   },
-  "homepage": "https://github.com/u4bi/cheeriojs-web-scraping#readme"
+  "homepage": "https://github.com/u4bi/cheeriojs-web-scraping#readme",
+  "dependencies": {
+    "cheerio": "^0.22.0",
+    "request": "^2.79.0"
+  }
 }
